--- a/src/main/resources/resources-config.json
+++ b/src/main/resources/resources-config.json
@@ -11,6 +11,15 @@
     },
     {
       "pattern": ".*.jpg$"
+    },
+    {
+      "pattern": ".*.js$"
+    },
+    {
+      "pattern": ".*.css$"
+    },
+    {
+      "pattern": ".*.ttf$"
     }
   ]
 }
